# Tkllm-darija

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Implementation-Roadmap.html  README.md  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: ml.yml
apps/api/: .env.example  Dockerfile  package.json
apps/web-b2b/: package.json
apps/web-contributor/: .env.example  package.json
data/ingestion/: README.md  atlasia_ingest.py  common.py  config.yaml  doda_ingest.py  dvoice_ingest.py  update_summary.py
data/registry/: datasets.yaml
data/samples/: README.md  dataset_summary.json
data/schemas/: audio_annotation.json  dataset_metadata.json  quality_review.json
infrastructure/docker/: .env.example  docker-compose.yml
infrastructure/scripts/: k8s-deploy.sh  rotate-secrets.sh  seed-kafka-topics.sh  seed-minio-buckets.sh  setup-local.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
ml/: package.json  pyproject.toml  requirements.txt
ml/evaluation/: evaluate_asr.py
ml/experiments/: mlflow.yaml
ml/experiments/tracking/: experiment_config.yaml
ml/feature-store/embeddings/: compute_embeddings.py
ml/feature-store/speaker/: speaker_features.py
ml/feature-store/text/: normalize_darija.py
ml/notebooks/: 01_data_exploration.ipynb  02_asr_baseline.ipynb
ml/training/: train_whisper.py
ml/training/configs/: whisper_large.yaml  whisper_small.yaml
services/analytics-service/: Dockerfile  package.json
services/asr-worker/: .env.example  Dockerfile  README.md  package.json
services/data-pipeline/: .env.example  package.json
services/financial-service/: Dockerfile  package.json
services/quality-engine/: .env.example  Dockerfile  README.md  package.json
(+321 files in other folders)
